crates/franken-node/tests/snapshots/verify_release_cli_e2e__verify_json_output_matrix.snap
---
source: crates/franken-node/tests/verify_release_cli_e2e.rs
expression: matrix
---
[
  {
    "name": "module_pass",
    "args": [
      "verify",
      "module",
      "config",
      "--json"
    ],
    "exit_code": 0,
    "success": true,
    "stdout_json": {
      "command": "verify module",
      "contract_version": "3.0.0",
      "schema_version": "verifier-cli-contract-v1",
      "compat_version": null,
      "verdict": "PASS",
      "status": "pass",
      "exit_code": 0,
      "reason": "module `config` resolved to [repo]/crates/franken-node/src/config.rs and all declared module dependencies are present",
      "details": {
        "module_id": "config",
        "exists": true,
        "source_path": "[repo]/crates/franken-node/src/config.rs",
        "declared_in": "[repo]/crates/franken-node/src/lib.rs",
        "integrity": {
          "algorithm": "sha256",
          "sha256": "[sha256]"
        },
        "deps_satisfied": true,
        "dependencies": [
          {
            "name": "timeouts",
            "path": "[repo]/crates/franken-node/src/config/timeouts.rs",
            "exists": true
          }
        ],
        "health": "not_declared",
        "target_kind": "franken_node_crate_src",
        "guest_js": false
      }
    },
    "stderr": ""
  },
  {
    "name": "module_unknown",
    "args": [
      "verify",
      "module",
      "definitely-not-a-real-module",
      "--json"
    ],
    "exit_code": 1,
    "success": false,
    "stdout_json": {
      "command": "verify module",
      "contract_version": "3.0.0",
      "schema_version": "verifier-cli-contract-v1",
      "compat_version": null,
      "verdict": "FAIL",
      "status": "fail",
      "exit_code": 1,
      "reason": "unknown module `definitely-not-a-real-module`; no source file found under [repo]/crates/franken-node/src (examples: api, claims, cli, config, conformance, connector, control_plane, encoding, extensions, federation, ...)",
      "details": {
        "module_id": "definitely_not_a_real_module",
        "exists": false,
        "search_root": "[repo]/crates/franken-node/src",
        "target_kind": "franken_node_crate_src",
        "guest_js": false
      }
    },
    "stderr": ""
  },
  {
    "name": "module_compat_error",
    "args": [
      "verify",
      "module",
      "runtime",
      "--compat-version",
      "1",
      "--json"
    ],
    "exit_code": 2,
    "success": false,
    "stdout_json": {
      "command": "verify module",
      "contract_version": "3.0.0",
      "schema_version": "verifier-cli-contract-v1",
      "compat_version": 1,
      "verdict": "ERROR",
      "status": "error",
      "exit_code": 2,
      "reason": "unsupported --compat-version=1; supported versions: 3 or 2",
      "details": {
        "target_kind": "franken_node_crate_src",
        "guest_js": false
      }
    },
    "stderr": ""
  },
  {
    "name": "migration_source_unproven",
    "args": [
      "verify",
      "migration",
      "rewrite",
      "--json"
    ],
    "exit_code": 1,
    "success": false,
    "stdout_json": {
      "command": "verify migration",
      "contract_version": "3.0.0",
      "schema_version": "verifier-cli-contract-v1",
      "compat_version": null,
      "verdict": "UNPROVEN",
      "status": "unproven",
      "exit_code": 1,
      "reason": "migration lane `rewrite` resolved to [repo]/crates/franken-node/src/migration/mod.rs but no authoritative migration evidence record was found under [repo]/.franken-node/state/migrations; source presence is diagnostic only",
      "details": {
        "migration_id": "rewrite",
        "record_path": null,
        "status": "source_present",
        "authority": "diagnostic_only",
        "post_conditions_met": null,
        "diff_summary": "source present without migration evidence is unproven",
        "lane_source": "[repo]/crates/franken-node/src/migration/mod.rs",
        "searched_locations": [
          {
            "kind": "state_record",
            "path": "[repo]/.franken-node/state/migrations/rewrite.json"
          },
          {
            "kind": "lane_source",
            "path": "[repo]/crates/franken-node/src/migration/mod.rs",
            "authority": "diagnostic_only"
          }
        ],
        "missing_fields": [
          "migration_evidence_record"
        ],
        "invariant_failures": [
          {
            "invariant_id": "MIGRATION_EVIDENCE_RECORD_MISSING",
            "field": "record_path",
            "observed": null,
            "expected": "state record under .franken-node/state/migrations",
            "severity": "error",
            "remediation_hint": "run migration audit/rewrite/validate and persist the migration evidence record before treating this result as PASS"
          }
        ],
        "live_rewrite": false,
        "source": "local_evidence_record"
      }
    },
    "stderr": ""
  },
  {
    "name": "migration_unknown",
    "args": [
      "verify",
      "migration",
      "definitely-not-a-lane",
      "--json"
    ],
    "exit_code": 1,
    "success": false,
    "stdout_json": {
      "command": "verify migration",
      "contract_version": "3.0.0",
      "schema_version": "verifier-cli-contract-v1",
      "compat_version": null,
      "verdict": "FAIL",
      "status": "fail",
      "exit_code": 1,
      "reason": "unknown migration target `definitely-not-a-lane`; no state record found under [repo]/.franken-node/state/migrations and no verify lane source resolved (expected one of: audit, rewrite, validate, bpet_migration_gate, dgis_migration_gate)",
      "details": {
        "migration_id": "definitely_not_a_lane",
        "record_path": null,
        "status": "missing",
        "authority": "missing",
        "post_conditions_met": false,
        "diff_summary": "no migration record or lane source resolved",
        "searched_locations": [
          {
            "kind": "state_record",
            "path": "[repo]/.franken-node/state/migrations/definitely_not_a_lane.json"
          }
        ],
        "missing_fields": [
          "migration_evidence_record",
          "lane_source"
        ],
        "invariant_failures": [
          {
            "invariant_id": "MIGRATION_TARGET_UNKNOWN",
            "field": "migration_id",
            "observed": "definitely-not-a-lane",
            "expected": "audit, rewrite, validate, bpet_migration_gate, dgis_migration_gate",
            "severity": "error",
            "remediation_hint": "verify a known migration lane or create an authoritative migration evidence record for this id"
          }
        ],
        "live_rewrite": false,
        "source": "local_evidence_record"
      }
    },
    "stderr": ""
  },
  {
    "name": "compat_profile_pass",
    "args": [
      "verify",
      "compatibility",
      "strict",
      "--json"
    ],
    "exit_code": 1,
    "success": false,
    "stdout_json": {
      "command": "verify compatibility",
      "contract_version": "3.0.0",
      "schema_version": "verifier-cli-contract-v1",
      "compat_version": null,
      "verdict": "FAIL",
      "status": "fail",
      "exit_code": 1,
      "reason": "compatibility target `strict` is runtime profile `strict`, not a compatibility claim; use `franken-node verify lockstep` or a runtime name (node, bun, franken-node)",
      "details": {
        "target": "strict",
        "target_kind": "profile",
        "profile": "strict",
        "compatible": false,
        "known_issues": [
          "runtime profiles are not compatibility claims; they do not auto-PASS"
        ]
      }
    },
    "stderr": ""
  },
  {
    "name": "corpus_pass",
    "args": [
      "verify",
      "corpus",
      "[corpus]",
      "--json"
    ],
    "exit_code": 0,
    "success": true,
    "stdout_json": {
      "command": "verify corpus",
      "contract_version": "3.0.0",
      "schema_version": "verifier-cli-contract-v1",
      "compat_version": null,
      "verdict": "PASS",
      "status": "pass",
      "exit_code": 0,
      "reason": "corpus path `[corpus]` matched 1 artifact(s) and all semantic validation invariants passed; sample match: [corpus]",
      "details": {
        "trace_id": "[trace-id]",
        "query": "[corpus]",
        "requested_kind": "auto",
        "matched_count": 1,
        "selected_path": "[corpus]",
        "selected_validation_kind": "corpus-manifest",
        "case_count": 4,
        "matched_artifacts": "[validation-reports]",
        "failed_invariants": [],
        "events": "[event-stream]"
      }
    },
    "stderr": ""
  },
  {
    "name": "release_extra_artifact_fail",
    "args": [
      "verify",
      "release",
      "[release]",
      "--key-dir",
      "[keys]",
      "--json"
    ],
    "exit_code": 1,
    "success": false,
    "stdout_json": {
      "schema_version": "franken-node/verify-release-cli/v1",
      "command": "verify.release",
      "release_path": "[release]",
      "manifest_signature_ok": true,
      "results": [
        {
          "artifact_name": "franken-node-linux-x64.tar.xz",
          "passed": true,
          "key_id": "d71b59ff094a2868",
          "failure_reason": null
        },
        {
          "artifact_name": "rogue-extra.bin",
          "passed": false,
          "key_id": "d71b59ff094a2868",
          "failure_reason": "artifact present but not listed in SHA256SUMS"
        }
      ],
      "overall_pass": false,
      "unlisted_artifact_count": 1
    },
    "stderr": ""
  }
]
